# VirtuPy

./: CLAUDE.md  Makefile  eslint.config.mjs  pyproject.toml  run.py
gui/: index.html  index.js
gui/static/js/: index.js
virtupy/: openai_wrapper.py  silero_tts.py  tts.py  vosk_tts.py
