[project]
name = "virtupy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "numpy>=1.24.0",
    "omegaconf>=2.3.0",
    "openai>=2.14.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]
